service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmi-loadbalancer-service
spec:
  selector:
    app: rmi-backend-api
  ports:
    - port: 30001
      targetPort: 8000
  type: NodePort
